// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating remix stats 2 {"format":"amd","expected":"amd"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-client-amd",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"amd","expected":"amd"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"cjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-client-cjs",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"cjs","expected":"cjs"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"es","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"esm","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;

exports[`Generating remix stats 2 {"format":"module","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-remix-v2-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.21.2",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "build",
  "plugin": {
    "name": StringMatching "@codecov/remix-vite-plugin",
    "version": Any<String>,
  },
  "version": "2",
}
`;
